feat: support more search types(BiliBili)